# christoph-native

./: README.md  package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  operations.rs
src-tauri/src/sftp/: client.rs  mod.rs  types.rs  utils.rs
src-tauri/src/state/: connection_pool.rs  mod.rs
src/components/: ConnectionForm.tsx  FileBrowser.tsx  FileDownloader.tsx  FileUploader.tsx  NotificationProvider.tsx
src/hooks/: useFileTransfer.ts
