[package]
name = "christoph"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "christoph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "christoph"
path = "src/main.rs"

[[bin]]
name = "sftp_test"
path = "src/bin/sftp_test.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.5"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"